# spotify-quiz

./: .cache  .env  api.py  main.py  pyproject.toml
static/: index.html
